# GLSL_with_Raylib

./: CMakeLists.txt  README.md  main.cpp
shaders/: fragment_shader.frag  vertex_shader.vert
